--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Strata by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Parth Vadera Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,9 +12,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Parth Vadera</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1><strong>Hi I'm Parth Vadera</strong>, I design and build creative games with fluid player movements.<br />
+					<!-- crafted by <a href="http://html5up.net">HTML5 UP</a>. -->
+				</h1>
 				</div>
 			</header>
 
@@ -29,12 +24,11 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>About Me</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>I'm an independent game developer, currently based in Montreal, Canada. I graduated from L'institut Supérieur d'Informatique in Video Game Programming. I have 4+ years of experience working in Unity3D and have published my games on an open marketplace websites like Apple Store, Google Play Store and Itch.io. I love being able to develop and design interactive experiences that can be enjoyed by a wide-range of different audiences.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="files/ParthVaderaResume.pdf" class="button">View Resume</a></li>
 						</ul>
 					</section>
 
@@ -44,19 +38,21 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/hell.png" alt="" /></a> -->
-								<video width="320" height="240" controls>
-									<source src="videos/Hell Jumping.mp4" type="video/mp4">
+								<video class="image fit thumb" width="320" height="240" controls>
+									<source src="videos/ArrowManiac.mp4" type="video/mp4">
 								</video>
-								<h3>HELL JUMPING</h3>
+								<h3>ARROW MANIAC MULTIPLAYER [PC]</h3>
 								<p>Drag your avatar left or right for perfect lending on track try not to fall off the track! Take boosts! Fly in the air as long as you can to improve your score! But don't fall down! Challenge your speed and every time try to chase your best score to make new high score!.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<video width="320" height="240" controls></video>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<video class="image fit thumb" width="320" height="240" controls>
+									<source src="videos/Hell Jumping.mp4" type="video/mp4">
+								</video>
+								<h3>HELL JUMPING [ANDROID]</h3>
+								<p>Drag your avatar left or right for perfect lending on track try not to fall off the track! Take boosts! Fly in the air as long as you can to improve your score! But don't fall down! Challenge your speed and every time try to chase your best score to make new high score!.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<video width="320" height="240" controls></video>
+								<video class="image fit thumb" width="320" height="240" controls></video>
 								<h3>Tortor metus commodo</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
@@ -443,10 +439,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://github.com/vaderaparth22" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto:vaderaparth22@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.instagram.com/parth_vadera/" class="icon brands fa-instagram"><span class="label">Twitter</span></a></li>
+						<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
