--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/hell.png" alt="" /></a> -->
-								<video class="image fit thumb" width="320" height="240" controls>
-									<source src="videos/ArrowManiac.mp4" type="video/mp4">
-									<iframe src="videos/ArrowManiac.mp4" width="320" height="240" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-								</video>
+								<a href="videos/ArrowManiac.mp4">
+									<video class="image fit thumb" width="320" height="240" controls poster="images/arrow.png">
+									<!-- <source src="videos/ArrowManiac.mp4" type="video/mp4"> -->
+									</video>
+								</a>
 								<h3>ARROW MANIAC MULTIPLAYER [PC]</h3>
 								<p>Drag your avatar left or right for perfect lending on track try not to fall off the track! Take boosts! Fly in the air as long as you can to improve your score! But don't fall down! Challenge your speed and every time try to chase your best score to make new high score!.</p>
 							</article>
