--- a/index.html
+++ b/index.html
@@ -38,16 +38,15 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/hell.png" alt="" /></a> -->
-								<a href="https://www.youtube.com/watch?v=2Sl6SiBo_0k" target="_blank">
+								<!-- <a href="https://www.youtube.com/watch?v=2Sl6SiBo_0k" target="_blank"> -->
 									<video class="image fit thumb" width="320" height="240" controls poster="images/arrow.png">
-									<!-- <source src="videos/ArrowManiac.mp4" type="video/mp4"> -->
+									<source src="videos/ArrowManiac.mp4" type="video/mp4">
 									</video>
-								</a>
+								<!-- </a> -->
 								<h3>TINY ARSENAL [PC]</h3>
 								<p>Drag your avatar left or right for perfect lending on track try not to fall off the track! Take boosts! Fly in the air as long as you can to improve your score! But don't fall down! Challenge your speed and every time try to chase your best score to make new high score!.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<!-- <a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/hell.png" alt="" /></a> -->
 								<a href="https://www.youtube.com/watch?v=1c4XhXJUWq8&ab_channel=Batsy%21" target="_blank">
 									<video class="image fit thumb" width="320" height="240" controls poster="images/tiny.png">
 									<!-- <source src="videos/ArrowManiac.mp4" type="video/mp4"> -->
@@ -57,9 +56,10 @@
 								<p>Drag your avatar left or right for perfect lending on track try not to fall off the track! Take boosts! Fly in the air as long as you can to improve your score! But don't fall down! Challenge your speed and every time try to chase your best score to make new high score!.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<video class="image fit thumb" width="320" height="240" controls>
+								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/hell.png" alt="" /></a>
+								<!-- <video class="image fit thumb" width="320" height="240" controls>
 									<source src="videos/Hell Jumping.mp4" type="video/mp4">
-								</video>
+								</video> -->
 								<h3>HELL JUMPING [ANDROID]</h3>
 								<p>Drag your avatar left or right for perfect lending on track try not to fall off the track! Take boosts! Fly in the air as long as you can to improve your score! But don't fall down! Challenge your speed and every time try to chase your best score to make new high score!.</p>
 							</article>
