--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 									<video class="image fit thumb" width="320" height="240" controls poster="images/arrow.png">
 									<!-- <source src="videos/ArrowManiac.mp4" type="video/mp4"> -->
 									</video>
+									<h3>TINY ARSENAL [PC]</h3>
 								</a>
-								<h3>TINY ARSENAL [PC]</h3>
 								<p>Drag your avatar left or right for perfect lending on track try not to fall off the track! Take boosts! Fly in the air as long as you can to improve your score! But don't fall down! Challenge your speed and every time try to chase your best score to make new high score!.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -51,8 +51,8 @@
 									<video class="image fit thumb" width="320" height="240" controls poster="images/tiny.png">
 									<!-- <source src="videos/ArrowManiac.mp4" type="video/mp4"> -->
 									</video>
+									<h3>ARROW MANIAC MULTIPLAYER [PC]</h3>
 								</a>
-								<h3>ARROW MANIAC MULTIPLAYER [PC]</h3>
 								<p>Drag your avatar left or right for perfect lending on track try not to fall off the track! Take boosts! Fly in the air as long as you can to improve your score! But don't fall down! Challenge your speed and every time try to chase your best score to make new high score!.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -62,30 +62,12 @@
 								<h3>HELL JUMPING [ANDROID]</h3>
 								<p>Drag your avatar left or right for perfect lending on track try not to fall off the track! Take boosts! Fly in the air as long as you can to improve your score! But don't fall down! Challenge your speed and every time try to chase your best score to make new high score!.</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<video class="image fit thumb" width="320" height="240" controls></video>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<video width="320" height="240" controls></video>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<video width="320" height="240" controls></video>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
 						</div>
-						<ul class="actions">
+
+						<!-- <ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
+						</ul> -->
+
 					</section>
 
 				<!-- Three -->
