--- a/index.html
+++ b/index.html
@@ -38,21 +38,23 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<!-- <a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/hell.png" alt="" /></a> -->
-								<a href="https://www.youtube.com/watch?v=2Sl6SiBo_0k" target="_blank">
-									<video class="image fit thumb" width="320" height="240" controls poster="images/arrow.png">
+								<a class="image fit thumb" href="https://www.youtube.com/watch?v=2Sl6SiBo_0k" target="_blank">
+									<!-- <video class="image fit thumb" width="320" height="240" controls poster="images/arrow.png"> -->
 									<!-- <source src="videos/ArrowManiac.mp4" type="video/mp4"> -->
-									</video>
-									<h3>TINY ARSENAL [PC]</h3>
+									<!-- </video> -->
+									<img src="images/arrow.png" alt="" />
 								</a>
+								<h3>ARROW MANIAC MULTIPLAYER [PC]</h3>
 								<p>Drag your avatar left or right for perfect lending on track try not to fall off the track! Take boosts! Fly in the air as long as you can to improve your score! But don't fall down! Challenge your speed and every time try to chase your best score to make new high score!.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://www.youtube.com/watch?v=1c4XhXJUWq8&ab_channel=Batsy%21" target="_blank">
-									<video class="image fit thumb" width="320" height="240" controls poster="images/tiny.png">
+								<a class="image fit thumb" href="https://www.youtube.com/watch?v=1c4XhXJUWq8&ab_channel=Batsy%21" target="_blank">
+									<!-- <video class="image fit thumb" width="320" height="240" controls poster="images/tiny.png"> -->
 									<!-- <source src="videos/ArrowManiac.mp4" type="video/mp4"> -->
-									</video>
-									<h3>ARROW MANIAC MULTIPLAYER [PC]</h3>
+									<!-- </video> -->
+									<img src="images/tiny.png" alt="" />
 								</a>
+								<h3>TINY ARSENAL [PC]</h3>
 								<p>Drag your avatar left or right for perfect lending on track try not to fall off the track! Take boosts! Fly in the air as long as you can to improve your score! But don't fall down! Challenge your speed and every time try to chase your best score to make new high score!.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -445,7 +447,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<!-- <script src="assets/js/jquery.poptrox.min.js"></script> -->
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
