--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						</header>
 						<p>I'm an independent game developer, currently based in Montreal, Canada. I graduated from L'institut Supérieur d'Informatique in Video Game Programming. I have 4+ years of experience working in Unity3D and have published my games on an open marketplace websites like Apple Store, Google Play Store and Itch.io. I love being able to develop and design interactive experiences that can be enjoyed by a wide-range of different audiences.</p>
 						<ul class="actions">
-							<li><a href="files/ParthVaderaResume.pdf" class="button">View Resume</a></li>
+							<li><a href="files/ParthVaderaResume.pdf" class="button primary icon solid fa-download">View Resume</a></li>
 						</ul>
 					</section>
 
@@ -75,9 +75,9 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+						<p>Got an interesting project? Send me a message.</p>
 						<div class="row">
-							<div class="col-8 col-12-small">
+							<!-- <div class="col-8 col-12-small">
 								<form method="post" action="#">
 									<div class="row gtr-uniform gtr-50">
 										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
@@ -88,22 +88,21 @@
 								<ul class="actions">
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
-							</div>
+							</div> -->
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
-										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
+										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
+										<a href="mailto:vaderaparth22@gmail.com">vaderaparth22@gmail.com</a>
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
+										514-576-2294
 									</li>
 									<li>
-										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
+										Montreal, QC<br />
+										Canada<br />
 									</li>
 								</ul>
 							</div>
@@ -111,8 +110,8 @@
 					</section>
 
 				<!-- Four -->
-				<!--
-					<section id="four">
+				
+					<!-- <section id="four">
 						<h2>Elements</h2>
 
 						<section>
@@ -425,8 +424,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<p><span class="image right"><img src="images/avatar.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
 						</section>
 
-					</section>
-				-->
+					</section> -->
+				
 
 			</div>
 
@@ -440,7 +439,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Parth Vadera</li>
+						<!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
 					</ul>
 				</div>
 			</footer>
