--- a/index.html
+++ b/index.html
@@ -37,32 +37,58 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+
 								<!-- <a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/hell.png" alt="" /></a> -->
-								<a class="image fit thumb" href="https://www.youtube.com/watch?v=2Sl6SiBo_0k" target="_blank">
-									<!-- <video class="image fit thumb" width="320" height="240" controls poster="images/arrow.png"> -->
-									<!-- <source src="videos/ArrowManiac.mp4" type="video/mp4"> -->
-									<!-- </video> -->
+								<!-- <a class="image fit thumb" href="https://www.youtube.com/watch?v=2Sl6SiBo_0k" target="_blank">
 									<img src="images/arrow.png" alt="" />
-								</a>
+								</a> -->
+
+								<video class="image fit thumb" width="320" height="240" controls poster="images/arrow.png"> -->
+									<source src="videos/Arrow Maniac Short.mp4" type="video/mp4">
+								</video>
+
 								<h3>ARROW MANIAC MULTIPLAYER [PC]</h3>
-								<p>Drag your avatar left or right for perfect lending on track try not to fall off the track! Take boosts! Fly in the air as long as you can to improve your score! But don't fall down! Challenge your speed and every time try to chase your best score to make new high score!.</p>
+								<p></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a class="image fit thumb" href="https://www.youtube.com/watch?v=1c4XhXJUWq8&ab_channel=Batsy%21" target="_blank">
-									<!-- <video class="image fit thumb" width="320" height="240" controls poster="images/tiny.png"> -->
-									<!-- <source src="videos/ArrowManiac.mp4" type="video/mp4"> -->
-									<!-- </video> -->
+
+								<video class="image fit thumb" width="320" height="240" controls poster="images/flocking.png">
+									<source src="videos/Flocking AI Short.mp4" type="video/mp4">
+								</video>
+								
+								<h3>FLOCKING AI [PC]</h3>
+								<p></p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+
+								<!-- <a class="image fit thumb" href="https://www.youtube.com/watch?v=1c4XhXJUWq8&ab_channel=Batsy%21" target="_blank">
 									<img src="images/tiny.png" alt="" />
-								</a>
+								</a> -->
+
+								<video class="image fit thumb" width="320" height="240" controls poster="images/tiny.png">
+									<source src="videos/ArrowManiac.mp4" type="video/mp4">
+								</video>
+
 								<h3>TINY ARSENAL [PC]</h3>
-								<p>Drag your avatar left or right for perfect lending on track try not to fall off the track! Take boosts! Fly in the air as long as you can to improve your score! But don't fall down! Challenge your speed and every time try to chase your best score to make new high score!.</p>
+								<p</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
+
 								<video class="image fit thumb" width="320" height="240" controls>
 									<source src="videos/Hell Jumping.mp4" type="video/mp4">
 								</video>
+
 								<h3>HELL JUMPING [ANDROID]</h3>
 								<p>Drag your avatar left or right for perfect lending on track try not to fall off the track! Take boosts! Fly in the air as long as you can to improve your score! But don't fall down! Challenge your speed and every time try to chase your best score to make new high score!.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+
+								<video class="image fit thumb" width="320" height="240" controls>
+									<source src="videos/Space Bomber Short.mp4" type="video/mp4">
+								</video>
+								
+								<h3>SPACE BOMBER [PC]</h3>
+								<p></p>
 							</article>
 						</div>
 
