--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<img class="image avatar" src="images/me.jpg" alt="" />
 					<h1><strong>Hi I'm Parth Vadera</strong>, I design and build creative games with fluid player movements.<br />
 					<!-- crafted by <a href="http://html5up.net">HTML5 UP</a>. -->
 				</h1>
@@ -87,13 +87,23 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 
+								<video class="image fit thumb" width="320" height="240" controls poster="images/madball.png">
+									<source src="videos/MadBall.mp4" type="video/mp4">
+								</video>
+								
+								<h3>MAD BALL [PC/ANDROID]</h3>
+								<h5>Space Bomber is a Top-down -3d-shooter game. In this game, player has to survive waves of enemies and get a high score. While playing various types of ammo boxes will be spawning which gives you different types of bombs.</h5>
+								<a href="https://parthvadera.itch.io/mad-ball">DOWNLOAD LINK</a>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+
 								<video class="image fit thumb" width="320" height="240" controls>
 									<source src="videos/Space Bomber Short.mp4" type="video/mp4">
 								</video>
 								
 								<h3>SPACE BOMBER [PC]</h3>
 								<h5>Space Bomber is a Top-down -3d-shooter game. In this game, player has to survive waves of enemies and get a high score. While playing various types of ammo boxes will be spawning which gives you different types of bombs.</h5>
-								<a href="https://github.com/isomorphica/ISI-J06-Project-Jeux2001A">SOURCE CODE</a>
+								<a href="https://github.com/vaderaparth22/SpaceBomberProject">SOURCE CODE</a>
 							</article>
 						</div>
 
@@ -137,7 +147,7 @@
 									</ul>
 									<h5>UNITY ENGINE</h5>
 									<ul>
-										<li>Editor Scripting, UI, Unity Physics system, Animations, Sound, Particle Systems, Controller Support, NavMesh, Profiler, Shader, Lighting, Rewired Input System, Local Multiplayer Support</li>
+										<li>Editor Scripting, UI, Unity Physics system, Animations, Sound, Particle Systems, Controller Support, NavMesh, Profiler, Shader, Lighting, Rewired Input System, Photon Multiplayer, Local Multiplayer Support</li>
 									</ul>
 									<h5>DESIGN PATTERNS</h5>
 									<ul>
