--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 								</video>
 								
 								<h3>MAD BALL [PC/ANDROID]</h3>
-								<h5>Space Bomber is a Top-down -3d-shooter game. In this game, player has to survive waves of enemies and get a high score. While playing various types of ammo boxes will be spawning which gives you different types of bombs.</h5>
+								<h5>Physics based game using Unity Physic materials to simulate catapult mechanics to destroy flying objects. Generated custom sprite particle effects to match the environment and ported game for Android.</h5>
 								<a href="https://parthvadera.itch.io/mad-ball">DOWNLOAD LINK</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
