--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
 									</ul>
 									<h5>UNITY ENGINE</h5>
 									<ul>
-										<li>Editor Scripting, UI, Unity Physics system, Animations, Sound, Particle Systems, Controller Support, NavMesh, Profiler, Shader, Lighting, Rewired Input System, Photon Multiplayer, Local Multiplayer Support</li>
+										<li>Editor Scripting, UI, Unity Physics system, AR & VR Development, Scriptable Objects Animations, Sound, Particle Systems, Controller Support, NavMesh, Profiler, Shader, Materials/Rendering, Lighting, Rewired Input System, Photon Multiplayer, Local Multiplayer Support</li>
 									</ul>
 									<h5>DESIGN PATTERNS</h5>
 									<ul>
-										<li>Top Down Architecture, Factory Pattern, Singleton, Object Pooling Factory Pattern, State Machine, observer </li>
+										<li>Top Down Architecture, Event-Driven Architecture, Factory Pattern, Singleton, Object Pooling Factory Pattern, State Machine, observer </li>
 									</ul>
 									<h5>WEB TECHNOLOGIES</h5>
 									<ul>
