--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								</video>
 								
 								<h3>FLOCKING AI [PC]</h3>
-								<h5>The fishes move in flock and keep themselves as a group and try to avoid colliding with each other as they swim. Also they follow Predator and Pray relationship , So small Big Fishes try to hunt down small fishes and flock of small fishes try to escape them while searching for food.</h5>
+								<h5>The fish swim as a flock, keeping themselves together and trying to avoid colliding with one another. They also follow the Predator and Prey relationship, so little big fishes try to hunt down small fishes while looking for food, while a swarm of small fishes try to avoid them.</h5>
 								<a href="https://github.com/vaderaparth22/Flocking-AI-main">SOURCE CODE</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
