--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 									<source src="videos/Flocking AI Short.mp4" type="video/mp4">
 								</video>
 								
-								<h3>FLOCKING AI [PC]</h3>
+								<h3>FLOCKING AI SIMULATION [PC]</h3>
 								<h5>The fish swim as a flock, keeping themselves together and trying to avoid colliding with one another. They also follow the Predator and Prey relationship, so little big fishes try to hunt down small fishes while looking for food, while a swarm of small fishes try to avoid them.</h5>
 								<a href="https://github.com/vaderaparth22/Flocking-AI-main">SOURCE CODE</a>
 							</article>
