added meteor vfx

--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 
+								<video class="image fit thumb" width="320" height="240" controls>
+									<source src="videos/meteorvfx.mkv" type="video/mp4">
+								</video>
+								
+								<h3>METEOR SIMULATION VFX [PC]</h3>
+								<h5>Reusable Meteor shower simulation made using Unity VFX Graph. It includes Trigger Events(collision), Ribbon/Trails, and Impact effect(decals) without writing any code.</h5>
+								<a href="https://github.com/vaderaparth22/Flocking-AI-main">SOURCE CODE</a>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+
 								<!-- <a class="image fit thumb" href="https://www.youtube.com/watch?v=1c4XhXJUWq8&ab_channel=Batsy%21" target="_blank">
 									<img src="images/tiny.png" alt="" />
 								</a> -->
