--- a/index.html
+++ b/index.html
@@ -97,6 +97,16 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 
+								<video class="image fit thumb" width="320" height="240" controls poster="images/mini.png">
+									<source src="videos/minishooter.mp4" type="video/mp4">
+								</video>
+
+								<h3>MINI SHOOTERS MULTIPLAYER [ANDROID]</h3>
+								<h5>The Photon PUN component was used to create an online and offline multiplayer first-person shooting game for Android. The game features a variety of online and offline modes, as well as extensive character customization and stunning graphics.</h5>
+								<a href="https://play.google.com/store/apps/details?id=com.shootersbattlegroundshootinggame.battlegroundshooting">DOWNLOAD LINK</a>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+
 								<video class="image fit thumb" width="320" height="240" controls poster="images/madball.png">
 									<source src="videos/MadBall.mp4" type="video/mp4">
 								</video>
