--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<header id="header">
 				<div class="inner">
 					<img class="image avatar" src="images/me.jpg" alt="" />
-					<h1><strong>Hi I'm Parth Vadera</strong>, I design and build creative games with fluid player movements.<br />
+					<h1><strong>Hi I'm Parth Vadera</strong>, I design and build creative games with fluid gameplay!<br />
 					<!-- crafted by <a href="http://html5up.net">HTML5 UP</a>. -->
 				</h1>
 				</div>
