--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						</header>
 						<p>I'm a game developer, currently based in Montreal, Canada. I graduated from L'institut Supérieur d'Informatique in Video Game Programming. I have 4+ years of experience working in Unity3D and have published my games on an open marketplace websites like Apple Store, Google Play Store and Itch.io. I love being able to develop and design interactive experiences that can be enjoyed by a wide-range of different audiences.</p>
 						<ul class="actions">
-							<li><a href="files/ParthVaderaResume.pdf" class="button icon solid fa-download">View Resume</a></li>
+							<li><a href="files/ParthVaderaCV.pdf" class="button icon solid fa-download">View Resume</a></li>
 						</ul>
 					</section>
 
