--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<ul class="icons">
 						<li><a href="https://github.com/vaderaparth22" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="mailto:vaderaparth22@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						<li><a href="https://www.instagram.com/parth_vadera/" class="icon brands fa-instagram"><span class="label">Twitter</span></a></li>
+						<!-- <li><a href="https://www.instagram.com/parth_vadera/" class="icon brands fa-instagram"><span class="label">Twitter</span></a></li> -->
 						<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 					</ul>
 					<ul class="copyright">
