--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<header class="major">
 							<h2>About Me</h2>
 						</header>
-						<p>I'm a game developer, currently based in Montreal, Canada. I have more than 3 years of professional experience working as game/software developer and have published my games on an open marketplace websites like Apple Store, Google Play Store and Itch.io. I love being able to develop and design interactive experiences that can be enjoyed by a wide-range of different audiences.</p>
+						<p>Hey there, I have been in gaming industry since last 5 years working professionaly as game/software developer and have helped studios make quality games. I have published games on an open marketplace websites like Apple Store, Google Play Store and Itch.io. I love being able to develop and design interactive experiences that can be enjoyed by a wide-range of different audiences.</p>
 						<ul class="actions">
 							<li><a href="files/ParthVaderaCV.pdf" class="button icon solid fa-download">View Resume</a></li>
 						</ul>
