--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<header id="header">
 				<div class="inner">
 					<img class="image avatar" src="images/me.jpg" alt="" />
-					<h1><strong>Hi I'm Parth</strong>, I design and build creative games with fluid gameplay!<br />
+					<h1><strong>Hi I'm Parth, I design and build creative games with fluid gameplay!</strong><br />
 					<!-- crafted by <a href="http://html5up.net">HTML5 UP</a>. -->
 				</h1>
 				</div>
@@ -207,12 +207,11 @@
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										514-576-2294
+										(514) 576-2294
 									</li>
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
 										Montreal, QC<br />
-										Canada<br />
 									</li>
 								</ul>
 							</div>
@@ -543,6 +542,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
+						<li><a href="www.linkedin.com/in/parth-vadera" class="icon solid fa-home"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/vaderaparth22" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="mailto:vaderaparth22@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						<!-- <li><a href="https://www.instagram.com/parth_vadera/" class="icon brands fa-instagram"><span class="label">Twitter</span></a></li> -->
