--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 						</header> -->
 						<h2>A bit about myself...</h2>
 						<p>Hey there, I have been in gaming industry since last 5 years working professionaly as game/software developer and have helped studios make quality games. I have published games on an open marketplace websites like Apple Store, Google Play Store and Itch.io. I love being able to develop and design interactive experiences that can be enjoyed by a wide-range of different audiences.</p>
-						<ul class="actions">
+						<!-- <ul class="actions">
 							<li><a href="files/ParthVaderaCV.pdf" class="button primary icon solid fa-download">View Resume</a></li>
-						</ul>
+						</ul> -->
 					</section>
 
 				<!-- Two -->
