--- a/index.html
+++ b/index.html
@@ -37,6 +37,24 @@
 					<section id="two">
 						<h2>My work</h2>
 						<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+
+								<!-- <a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/hell.png" alt="" /></a> -->
+								<!-- <a class="image fit thumb" href="https://www.youtube.com/watch?v=2Sl6SiBo_0k" target="_blank">
+									<img src="images/arrow.png" alt="" />
+								</a> -->
+
+								<!-- <video class="image fit thumb" width="320" height="240" controls poster="images/arrow.png">
+									<source src="videos/Arrow Maniac Short.mp4" type="video/mp4">
+								</video> -->
+
+								<img class="image fit thumb" src="videos/arrowmaniac.gif"></img>
+
+								<h3>ARROW MANIAC MULTIPLAYER [PC]</h3>
+								<h5>Arrow Maniac is a 2D platformer couch co-op local multiplayer game in a fast-paced environment. The game follows the Top-down singleton architecture with Highly scalability.</h5>
+								<a class="button primary small" href="https://www.youtube.com/watch?v=2Sl6SiBo_0k&ab_channel=Batsy%21">FULL GAMEPLAY </a>
+							</article>
+
 							<!-- ARROW MANIAC -->
 							<article class="col-6 col-12-xsmall work-item">
 
@@ -65,7 +83,7 @@
 
 								<img class="image fit thumb" src="videos/ezgif.gif"></img>
 
-								<h3>ROBO SCI-FI [PC]</h3>
+								<h3>ROBO SCI-FI [PC/Android]</h3>
 								<h5>A survival Robo Sci-Fi Game significantly developed with a full-fledged user experience and eye-pleasing graphics. Developed smart enemy AI using Nav-mesh agent (A* pathfinding).</h5>
 								<a class="button primary small" class="button primary small" href="https://github.com/vaderaparth22/TinyArsenal">SOURCE CODE</a>
 							</article>
@@ -107,8 +125,8 @@
 
 								<img class="image fit thumb" src="videos/helljump.gif"></img>
 
-								<h3>HELL JUMPING [ANDROID]</h3>
-								<h5>Drag your avatar left or right for perfect lending on track try not to fall off the track! Take boosts! Fly in the air as long as you can to improve your score! But don't fall down! Challenge your speed and every time try to chase your best score to make new high score!.</h5>
+								<h3>HELL JUMPING [ANDROID/iOS]</h3>
+								<h5>Drag your avatar left or right for perfect lending on track try not to fall off the track! Take boosts! Fly in the air as long as you can to improve your score! But don't fall down! Challenge your speed and every time try to chase your best score to make new high score!</h5>
 								<a class="button primary small" href="https://apkpure.com/hell-jumping/com.gamaxidc.HellJumping">DOWNLOAD LINK</a>
 							</article>
 
@@ -121,7 +139,7 @@
 
 								<img class="image fit thumb" src="videos/minishootergif.gif"></img>
 
-								<h3>MINI SHOOTERS MULTIPLAYER [ANDROID]</h3>
+								<h3>MINI SHOOTERS MULTIPLAYER [ANDROID/iOS]</h3>
 								<h5>The Photon PUN component was used to create an online and offline multiplayer first-person shooting game for Android. The game features a variety of online and offline modes, as well as extensive character customization and stunning graphics.</h5>
 								<a class="button primary small" href="https://play.google.com/store/apps/details?id=com.shootersbattlegroundshootinggame.battlegroundshooting">DOWNLOAD LINK</a>
 							</article>
@@ -135,7 +153,7 @@
 								
 								<img class="image fit thumb" src="videos/madball.gif"></img>
 
-								<h3>MAD BALL [PC/ANDROID]</h3>
+								<h3>MAD BALL [PC/ANDROID/iOS]</h3>
 								<h5>Physics based game using Unity Physic materials to simulate catapult mechanics to destroy flying objects. Generated custom sprite particle effects to match the environment and ported game for Android.</h5>
 								<a class="button primary small" href="https://parthvadera.itch.io/mad-ball">DOWNLOAD LINK</a>
 							</article>
