--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 								<h3>ROBO SCI-FI [PC/Android]</h3>
 								<h5>A survival Robo Sci-Fi Game significantly developed with a full-fledged user experience and eye-pleasing graphics. Developed smart enemy AI using Nav-mesh agent (A* pathfinding).</h5>
-								<a class="button primary small" class="button primary small" href="https://github.com/vaderaparth22/TinyArsenal">SOURCE CODE</a>
+								<a class="button primary small" class="button primary small" href="https://youtu.be/1c4XhXJUWq8?t=17">FULL GAMEPLAY</a>
 							</article>
 
 							<!-- METEOR SIMULATION -->
