--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 								<h3>HELL JUMPING [ANDROID/iOS]</h3>
 								<h5>Drag your avatar left or right for perfect lending on track try not to fall off the track! Take boosts! Fly in the air as long as you can to improve your score! But don't fall down! Challenge your speed and every time try to chase your best score to make new high score!</h5>
-								<a class="button primary small" href="https://apkpure.com/hell-jumping/com.gamaxidc.HellJumping">DOWNLOAD LINK</a>
+								<a class="button primary small" href="#">DOWNLOAD LINK</a>
 							</article>
 
 							<!-- MINI SHOOTERS -->
