--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@
 									</ul>
 									<h5>DESIGN PATTERNS</h5>
 									<ul>
-										<li>Top Down Architecture, Event-Driven Architecture, Factory Pattern, Singleton, Object Pooling Factory Pattern, State Machine, observer </li>
+										<li>Top Down Architecture, Event-Driven Architecture, Factory Pattern, Singleton, Object Pooling Factory Pattern, State Machine, Observer </li>
 									</ul>
 									<h5>WEB TECHNOLOGIES</h5>
 									<ul>
-										<li>HTML, CSS, JavaScript, React, Node.js </li>
+										<li>React.js, Node.js, Python </li>
 									</ul>
 								</div>
 							</div>
