--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 			<header id="header">
 				<div class="inner">
 					<img class="image avatar" src="images/me.jpg" alt="" />
-					<h1><strong>Hi I'm Parth, I design and build creative games with fluid gameplay!</strong><br />
+					<h1><strong>Parth Vadera | Game Designer</strong><br />
 					<!-- crafted by <a href="http://html5up.net">HTML5 UP</a>. -->
 				</h1>
+				<!-- <h1>I design and build creative games with fluid gameplay</h1><br /> -->
 				</div>
 			</header>
 
@@ -27,7 +28,7 @@
 							<h2>About Me</h2>
 						</header> -->
 						<h2>A bit about myself...</h2>
-						<p>Hey there, I have been in gaming industry since last 5 years working professionaly as game/software developer and have helped studios make quality games. I have published games on an open marketplace websites like Apple Store, Google Play Store and Itch.io. I love being able to develop and design interactive experiences that can be enjoyed by a wide-range of different audiences.</p>
+						<p>I have been in gaming industry since last 5 years working professionaly as game programmer/designer and have helped studios make quality games. I have published games on an open marketplace websites like Apple Store, Google Play Store and Itch.io. I love being able to develop and design interactive experiences that can be enjoyed by a wide-range of different audiences.</p>
 						<!-- <ul class="actions">
 							<li><a href="files/Parth Vadera CV.pdf" class="button primary icon solid fa-download">View Resume</a></li>
 						</ul> -->
